--- a/trafficlicense/core/templates/base.html
+++ b/trafficlicense/core/templates/base.html
@@ -74,7 +74,7 @@
     </div>
     <div class="sidenav-footer position-absolute w-100 bottom-0 ">
       <div class="mx-3">
-        <a class="btn btn-outline-dark mt-4 w-100" href="#">Logout</a>
+        <a class="btn btn-outline-dark mt-4 w-100" href="{% url 'logout' %}">Logout</a>
       </div>
     </div>
   </aside>
@@ -177,7 +177,7 @@
             </li>
             
             <li class="nav-item d-flex align-items-center">
-              <a class="btn btn-outline-primary btn-sm mb-0 me-3" target="_blank" href="#">Logout</a>
+              <a class="btn btn-outline-primary btn-sm mb-0 me-3" target="_blank" href="{% url 'logout' %}">Logout</a>
             </li>
           </ul>
         </div>
@@ -185,6 +185,14 @@
     </nav>
     <!-- End Navbar -->
     <div class="container-fluid py-2">
+                {% if messages %}
+                    {% for message in messages %}
+                        <div class="alert alert-secondary alert-dismissible fade show" role="alert">
+                            {{ message }}
+                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        </div>
+                    {% endfor %}
+                {% endif %}
         {% block content %}
 
         {% endblock %}
@@ -251,7 +259,7 @@
           </div>
         </div>
         <hr class="horizontal dark my-sm-4">
-        <a class="btn bg-gradient-info w-100" href="#">Download</a>
+        <a class="btn bg-gradient-info w-100" href="{% url 'logout' %}">Logout</a>
         
       </div>
     </div>
