--- a/trafficlicense/core/templates/base.html
+++ b/trafficlicense/core/templates/base.html
@@ -8,7 +8,7 @@
   <link rel="apple-touch-icon" sizes="76x76" href="{% static 'assets/img/apple-icon.png">
   <link rel="icon" type="image/png" href="{% static 'assets/img/favicon.png">
   <title>
-    {% block title %}{% endblock %}
+    {% block title %}{% endblock %} | TrafficMW
   </title>
   <!--     Fonts and icons     -->
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600,700,900" />
@@ -177,7 +177,7 @@
             </li>
             
             <li class="nav-item d-flex align-items-center">
-              <a class="btn btn-outline-primary btn-sm mb-0 me-3" target="_blank" href="{% url 'logout' %}">Logout</a>
+              <a class="btn btn-outline-primary btn-sm mb-0 me-3" href="{% url 'logout' %}">Logout</a>
             </li>
           </ul>
         </div>
