--- a/trafficlicense/core/templates/signin.html
+++ b/trafficlicense/core/templates/signin.html
@@ -18,8 +18,8 @@
                 <form role="form" class="text-start" method="post" action="{% url 'signin' %}">
                     {% csrf_token %}
                     <div class="input-group input-group-outline my-3">
-                        <label class="form-label">Email</label>
-                        <input type="email" name="email" class="form-control" required>
+                        <label class="form-label">Username</label>
+                        <input type="text" name="username" class="form-control" required>
                     </div>
                     <div class="input-group input-group-outline mb-3">
                         <label class="form-label">Password</label>
