--- a/trafficlicense/core/templates/signup.html
+++ b/trafficlicense/core/templates/signup.html
@@ -1,9 +1,9 @@
 {% extends 'basesign.html' %}
 {% load static %}
-{% block title %}Login{% endblock %}
+{% block title %}Create an Account{% endblock %}
 {% block content %}
                 <div class="bg-gradient-dark shadow-dark border-radius-lg py-3 pe-1">
-                  <h4 class="text-white font-weight-bolder text-center mt-2 mb-0">Create An Account</h4>
+                  <h4 class="text-white font-weight-bolder text-center mt-2 mb-0">Create an Account</h4>
                 </div>
               </div>
               <div class="card-body">
