--- a/trafficlicense/core/templates/video_feed.html
+++ b/trafficlicense/core/templates/video_feed.html
@@ -97,7 +97,7 @@
                     {% endif %}
                 </div>
             </div>
-            <div class="card-body p-3 pb-0">
+            <!-- <div class="card-body p-3 pb-0">
               <ul class="list-group">
                 <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-2 border-radius-lg">
                   <div class="d-flex flex-column">
@@ -150,9 +150,12 @@
                   </div>
                 </li>
               </ul>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
 
 {% endblock %}
+
+
+
